Bug 263332 - "Tag Filters", "Captions/Tags" right-click options impair usability
Summary: "Tag Filters", "Captions/Tags" right-click options impair usability
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Captions (other bugs)
Version First Reported In: 1.7.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-16 17:23 UTC by Elle Stone
Modified: 2017-07-29 10:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elle Stone 2011-01-16 17:23:14 UTC
Version:           1.7.0 (using KDE 4.5.1) 
OS:                Linux

On the right-panel, on "Caption/Tags" and on "Tag Filters", two of the "right-click for menu" tag options are causing me a certain amount of grief as I try to tag several years worth of photographs. Those options are: "Export" and "Batch Process". 

Whenever I am trying to add tags using "Captions/Tags", if I have selected one or more images, if I open the right-click dialog to add a new tag, and if I roll over the "Batch Process" right-click option and don't move the mouse quickly enough, my selected images are deselected. 

Whenever I am trying to select and deselect tags on the "Tag Filters" right-panel, when I open the right-click dialog, if I roll over the "Export" option and don't move the mouse quickly enough, all my selected images are deselected. 

Reproducible: Always

Steps to Reproduce:
Open digikam, open either of the tag-related right panels, select one or more images. Have the mouse hesitate over the "Batch Process" option ("Captions/Tags") or the "Export" option ("Tag Filters"). The selected image will deselect.

Actual Results:  
The selected image(s) will deselect.

Expected Results:  
The selected images should not deselect.

Both of these problem right-click options are also available from the top menu. "Export" is available as "Export", and the four "Batch Process" options  are available from the top menu "Tools". Is there a "useability reason" why they also need to be on the "Caption/Tags" and on "Tag Filters" right-click menus? 

Personally, I can't imagine how or why one would be in the middle of setting up tag filters and suddenly decide to export images, or why one would be in the middle of tagging images and suddenly decide to start batch-processing the selected images, such that the batch-process option needs to be right there next to the tagging options. 

Does anyone actually use these right-click menu options from the right-side "Caption/Tags" and "Tag Filters"? If this is a setup that people actually use and want, could the mouse-over time before activation be increased? I'm not as young and fast and coordinated as I used to be and so it is a bit bothersome to see my carefully selected images deselect before I get a chance to actually put tags on them.
Comment 1 Marcel Wiesweg 2011-02-05 23:59:32 UTC
Git commit 8bd57bc5c9b7f3530a094b90f14c2a290b8dc998 by Marcel Wiesweg.
Committed on 05/02/11 at 23:52.
Pushed by mwiesweg into branch 'development/2.0'.

Do not attempt to edit current selection when a certain submenu is shown.

There seem to be connections selecting all items when a submenu is shown
(does not work) and deselecting all (sometimes hits) when it is hidden
again. Hovering the mouse anywhere though should not edit the user's selection.
BUG: 263332

M  +3    -1    NEWS     
M  +0    -8    digikam/contextmenuhelper.cpp     

http://commits.kde.org/digikam/8bd57bc5c9b7f3530a094b90f14c2a290b8dc998
Comment 2 Andi Clemens 2011-02-06 01:01:01 UTC
Well actually this behavior was introduced for another bugfix, which should be reopened right now (I don't know the number, need to check it tomorrow).