Do not attempt to edit current selection when a certain submenu is shown.

There seem to be connections selecting all items when a submenu is shown
(does not work) and deselecting all (sometimes hits) when it is hidden
again. Hovering the mouse anywhere though should not edit the user's selection.
BUG: 263332